<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Claro Api</string>
    <string name="activity_home">Home</string>
    <string name="text_login">Login</string>
    <string name="login">Login</string>
    <string name="user_id">User Id</string>
    <string name="userid">User Id</string>
    <string name="name">Name</string>

    <string name="device_details">Device Details</string>
    <string name="device_name">Device Name</string>
    <string name="remove_device">Remove Device</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="rename">Rename</string>
    <string name="switch_device">Switch Device</string>

    <string name="button_login">Login</string>
</resources>
