<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.claroclient.LoginActivity"
	>
	<TextView 
		android:id="@+id/text_login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/text_login"
		/>
	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<android.support.design.widget.TextInputEditText
			android:id="@+id/userid"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/userid"
			android:inputType="text"
			/>
	</android.support.design.widget.TextInputLayout>

	<Button 
		android:id="@+id/login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:onClick="login"
		/>	
</LinearLayout>	