<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="30dp"
	tools:context="com.claroclient.DeviceDetailsActvivity"
	>
	<TextView 
		android:id="@+id/text_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/device_name"
		android:textSize="18dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		/>

	<EditText 
		android:id="@+id/input_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/device_name"
		android:textSize="18dp"
		android:visibility="invisible"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		/>

	<Button 
		android:id="@+id/button_rename"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/rename"
		android:onClick="renameDevice"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintRight_toRightOf="@+id/button_remove"
		app:layout_constraintLeft_toLeftOf="@+id/button_remove"
		/>


	<ImageView 
		android:id="@+id/image_device_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/android_36"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="@+id/button_remove"
		/>

	<Button 
		android:id="@+id/button_remove"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/remove_device"
		android:onClick="removeDevice"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button_rename"
		/>	

	<Button 
		android:id="@+id/button_switch"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/switch_device"
		android:onClick="switchDevice"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button_remove"
		/>	

</androidx.constraintlayout.widget.ConstraintLayout>